# future-dungeon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  content.json
src/: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  actions.rs  add_content.py  app.rs  bugs.md  components.rs  content.json  content.rs  engine.rs  input.rs  main.rs  map.rs  map_builder.rs  persistence.rs  renderer.rs  savegame.json  spawner.rs  systems.rs
src/app/: actions.rs  actions_alchemy.rs  actions_class_select.rs  actions_debug.rs  actions_item.rs  actions_levelup.rs  actions_menu.rs  actions_respec.rs  actions_shop.rs  actions_spells.rs  casting.rs  combat.rs  damage.rs  helpers.rs  items_equip.rs  items_shop.rs  items_use_basic.rs  items_use_ranged.rs  level_gen.rs  level_gen_helpers.rs  level_transition.rs  lore.rs  mana_regen.rs  mod.rs  monster.rs  monster_ai_calc.rs  monster_ai_execute.rs  monster_boss.rs  monster_perception.rs  player_move.rs  serialization.rs  shrine.rs  snapshot.rs  state.rs  tome.rs  turn_tick.rs  visual_effects.rs  world_update.rs
src/content/: loader.rs  mod.rs  types.rs
src/docs/: epic-1-multilevel-depth.md  epic-3-equipment.md  epic-5-bosses.md  epic-5-monster-ai-2.md  epic-8-branches.md  epic-9-knowledge-base.md  epics.md
src/docs/archive/: epic-2-game-persistence.md  epic-3-procedural-generation.md  epic-4-ecs.md  epic-5-movement-exploration.md  epic-6-combat-stats.md  epic-7-monster-ai.md  epic-9-ui.md
src/docs/archive/v0.2/: epic-10-data-driven.md  epic-3-ranged-magic.md  (+3 more)
src/docs/design/: dungeon_rhythm.md  player.md
(+99 files in other folders)
