[package]
name = "rustlike"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26.1", features = ["serde"] }
crossterm = "0.27.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
hecs = "0.10.3"

[[bin]]
name = "rustlike"
path = "main.rs"
